--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /*  your css code here. If applicable */
   body {
-      background: url('https://www.bing.com/images/search?q=nature+images+hd&id=CF2F957EE1FCB4E3266BAD63ECBC2A44414F8C3D&FORM=IACFIR') no-repeat center center fixed;
+      background-imgae: url('https://www.bing.com/images/search?q=nature+images+hd&id=CF2F957EE1FCB4E3266BAD63ECBC2A44414F8C3D&FORM=IACFIR') ;
       background-size: cover;
       font-family: sans-serif;
     }
